cmake_minimum_required(VERSION 3.26)
project(coding_test)

set(CMAKE_CXX_STANDARD 17)

add_executable(coding_test main.cpp
        Search/BFS_1167.cpp
        Search/DFSandBFS_1260.cpp
        Search/Kth_number_1300.cpp
        Search/Find_the_number_1920.cpp
        Search/Decimal_2023.cpp
        Search/Maze_navigation_2178.cpp
        Search/guitar_lessons_2343.cpp
        Search/Number_of_connection_elements_11724.cpp
        Search/ABCDE_13023.cpp
        Graph/lier_1043.cpp
        Sorting/QuickSort.cpp
        Sorting/MergeSort.cpp
        Graph/MST_1197.cpp
        Graph/1219_Bellman-Ford.cpp
        Graph/BFS_1325.cpp
        Graph/BFS_1389.cpp
        Graph/MST_1414.cpp
        Graph/TopologicalSorting_1516.cpp
        Graph/Bipartite_1707.cpp
        Graph/UnionFind_1717.cpp
        Graph/Dijstra_1753.cpp
        Graph/Dijstra_1854.cpp)
